--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
-    "semantic-ui-react": "^0.76.0"
+    "semantic-ui-react": "^0.76.0",
+    "homepage": "cowboy-crocodile-86186.netlify.com/#/"
   },
   "scripts": {
     "start": "react-scripts start",
